services/vllm/0.5.2/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: path-prefix
spec:
  stripPrefix:
    prefixes:
      - /vllm
